internal/generator/output/interop_array.h

typedef struct {
    void* data;
    int length;
    int elementSize;
} GoArray;
typedef struct {
    GoArray v0;
    uint64_t v1;
} Dialogue_Button_MarshalJSON_Result;
typedef struct {
    GoArray v0;
    uint64_t v1;
} Dialogue_Dialogue_MarshalJSON_Result;
typedef struct {
    GoArray v0;
    uint64_t v1;
} Dialogue_DisplaySettings_MarshalJSON_Result;
uint64_t Cube_BBox_Stretch(uint64_t self, int p1, double p2);
uint64_t Cube_BBox_Translate(uint64_t self, uint64_t p1);
uint64_t Cube_BBox_TranslateTowards(uint64_t self, int p1, double p2);
bool Cube_BBox_Vec3Within(uint64_t self, uint64_t p1);
bool Cube_BBox_Vec3WithinXY(uint64_t self, uint64_t p1);
bool Cube_BBox_Vec3WithinXZ(uint64_t self, uint64_t p1);
bool Cube_BBox_Vec3WithinYZ(uint64_t self, uint64_t p1);
double Cube_BBox_Volume(uint64_t self);
double Cube_BBox_Width(uint64_t self);
double Cube_BBox_XOffset(uint64_t self, uint64_t p1, double p2);
double Cube_BBox_YOffset(uint64_t self, uint64_t p1, double p2);
double Cube_BBox_ZOffset(uint64_t self, uint64_t p1, double p2);
uint64_t Dialogue_Button_Ctor(void);
Dialogue_Button_MarshalJSON_Result Dialogue_Button_MarshalJSON(uint64_t self);
uint64_t Dialogue_Dialogue_Ctor(void);
char* Dialogue_Dialogue_Body(uint64_t self);
GoArray Dialogue_Dialogue_Buttons(uint64_t self);
void Dialogue_Dialogue_Close(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t Dialogue_Dialogue_Display(uint64_t self);
Dialogue_Dialogue_MarshalJSON_Result Dialogue_Dialogue_MarshalJSON(uint64_t self);
uint64_t Dialogue_Dialogue_Submit(uint64_t self, uint64_t p1, uint64_t p2, uint64_t p3);
char* Dialogue_Dialogue_Title(uint64_t self);
uint64_t Dialogue_Dialogue_WithBody(uint64_t self, uint64_t p1);
uint64_t Dialogue_Dialogue_WithButtons(uint64_t self, uint64_t p1);
uint64_t Dialogue_Dialogue_WithDisplay(uint64_t self, uint64_t p1);
uint64_t Dialogue_DisplaySettings_Ctor(void);
Dialogue_DisplaySettings_MarshalJSON_Result Dialogue_DisplaySettings_MarshalJSON(uint64_t self);
uint64_t Effect_Effect_Ctor(void);
bool Effect_Effect_Ambient(uint64_t self);
int64_t Effect_Effect_Duration(uint64_t self);
bool Effect_Effect_Infinite(uint64_t self);
int Effect_Effect_Level(uint64_t self);
bool Effect_Effect_ParticlesHidden(uint64_t self);
int Effect_Effect_Tick(uint64_t self);
uint64_t Effect_Effect_TickDuration(uint64_t self);
uint64_t Effect_Effect_Type(uint64_t self);
uint64_t Effect_Effect_WithoutParticles(uint64_t self);
uint64_t Hud_Element_Ctor(void);
uint8_t Hud_Element_Uint8(uint64_t self);
uint64_t Image_Point_Ctor(void);
uint64_t Image_Point_Add(uint64_t self, uint64_t p1);
uint64_t Image_Point_Div(uint64_t self, int p1);
bool Image_Point_Eq(uint64_t self, uint64_t p1);
bool Image_Point_In(uint64_t self, uint64_t p1);
uint64_t Image_Point_Mod(uint64_t self, uint64_t p1);
uint64_t Image_Point_Mul(uint64_t self, int p1);
char* Image_Point_String(uint64_t self);
uint64_t Image_Point_Sub(uint64_t self, uint64_t p1);
uint64_t Image_Rectangle_Ctor(void);
uint64_t Image_Rectangle_Add(uint64_t self, uint64_t p1);
uint64_t Image_Rectangle_At(uint64_t self, int p1, int p2);
uint64_t Image_Rectangle_Bounds(uint64_t self);
uint64_t Image_Rectangle_Canon(uint64_t self);
uint64_t Image_Rectangle_ColorModel(uint64_t self);
int Image_Rectangle_Dx(uint64_t self);
int Image_Rectangle_Dy(uint64_t self);
bool Image_Rectangle_Empty(uint64_t self);
bool Image_Rectangle_Eq(uint64_t self, uint64_t p1);
bool Image_Rectangle_In(uint64_t self, uint64_t p1);
uint64_t Image_Rectangle_Inset(uint64_t self, int p1);
uint64_t Image_Rectangle_Intersect(uint64_t self, uint64_t p1);
bool Image_Rectangle_Overlaps(uint64_t self, uint64_t p1);
uint64_t Image_Rectangle_RGBA64At(uint64_t self, int p1, int p2);
uint64_t Image_Rectangle_Size(uint64_t self);
char* Image_Rectangle_String(uint64_t self);
uint64_t Image_Rectangle_Sub(uint64_t self, uint64_t p1);
uint64_t Image_Rectangle_Union(uint64_t self, uint64_t p1);
uint64_t Inventory_Armour_Ctor(void);
uint64_t Inventory_Armour_Boots(uint64_t self);
uint64_t Inventory_Armour_Chestplate(uint64_t self);
GoArray Inventory_Armour_Clear(uint64_t self);
uint64_t Inventory_Armour_Close(uint64_t self);
void Inventory_Armour_Damage(uint64_t self, double p1, uint64_t p2);
double Inventory_Armour_DamageReduction(uint64_t self, double p1, uint64_t p2);
void Inventory_Armour_Handle(uint64_t self, uint64_t p1);
uint64_t Inventory_Armour_Helmet(uint64_t self);
int Inventory_Armour_HighestEnchantmentLevel(uint64_t self, uint64_t p1);
uint64_t Inventory_Armour_Inventory(uint64_t self);
GoArray Inventory_Armour_Items(uint64_t self);
double Inventory_Armour_KnockBackResistance(uint64_t self);