internal/generator/output/interop_bindings.g.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cube_BBox_Stretch(ulong self, int p1, double p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cube_BBox_Translate(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cube_BBox_TranslateTowards(ulong self, int p1, double p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Cube_BBox_Vec3Within(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Cube_BBox_Vec3WithinXY(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Cube_BBox_Vec3WithinXZ(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Cube_BBox_Vec3WithinYZ(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Cube_BBox_Volume(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Cube_BBox_Width(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Cube_BBox_XOffset(ulong self, ulong p1, double p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Cube_BBox_YOffset(ulong self, ulong p1, double p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Cube_BBox_ZOffset(ulong self, ulong p1, double p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Dialogue_Button_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Dialogue_Button_MarshalJSON_Result Dialogue_Button_MarshalJSON(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Dialogue_Dialogue_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Dialogue_Dialogue_Body(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Dialogue_Dialogue_Buttons(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Dialogue_Dialogue_Close(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Dialogue_Dialogue_Display(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Dialogue_Dialogue_MarshalJSON_Result Dialogue_Dialogue_MarshalJSON(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Dialogue_Dialogue_Submit(ulong self, ulong p1, ulong p2, ulong p3);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Dialogue_Dialogue_Title(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Dialogue_Dialogue_WithBody(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Dialogue_Dialogue_WithButtons(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Dialogue_Dialogue_WithDisplay(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Dialogue_DisplaySettings_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Dialogue_DisplaySettings_MarshalJSON_Result Dialogue_DisplaySettings_MarshalJSON(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Effect_Effect_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Effect_Effect_Ambient(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long Effect_Effect_Duration(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Effect_Effect_Infinite(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Effect_Effect_Level(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Effect_Effect_ParticlesHidden(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Effect_Effect_Tick(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Effect_Effect_TickDuration(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Effect_Effect_Type(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Effect_Effect_WithoutParticles(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Hud_Element_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Hud_Element_Uint8(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Point_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Point_Add(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Point_Div(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Image_Point_Eq(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Image_Point_In(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Point_Mod(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Point_Mul(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Image_Point_String(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Point_Sub(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_Add(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_At(ulong self, int p1, int p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_Bounds(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_Canon(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_ColorModel(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Image_Rectangle_Dx(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Image_Rectangle_Dy(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Image_Rectangle_Empty(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Image_Rectangle_Eq(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Image_Rectangle_In(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_Inset(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_Intersect(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Image_Rectangle_Overlaps(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_RGBA64At(ulong self, int p1, int p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_Size(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Image_Rectangle_String(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_Sub(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Image_Rectangle_Union(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Inventory_Armour_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Inventory_Armour_Boots(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Inventory_Armour_Chestplate(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Inventory_Armour_Clear(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Inventory_Armour_Close(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Inventory_Armour_Damage(ulong self, double p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Inventory_Armour_DamageReduction(ulong self, double p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Inventory_Armour_Handle(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Inventory_Armour_Helmet(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Inventory_Armour_HighestEnchantmentLevel(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Inventory_Armour_Inventory(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Inventory_Armour_Items(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Inventory_Armour_KnockBackResistance(ulong self);
